set(src
  MULT.F
  DECOMP.F
  JACOBI.F
  REDBAK.F
  SCHECK.F
  STARTV.F
  )

add_library(Linalg
  ${src}
  )

install(TARGETS Linalg
  EXPORT ${TARGETS_EXPORT_NAME}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  )


